# borato-eq

./: .gitignore  BoratoEq.jucer  CMakeLists.txt  README.md  test_params.py
.github/workflows/: build-release-artifacts.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  Settings.cpp  Settings.h
Source/dsp/: ColourStage.cpp  ColourStage.h  ParallelEq.cpp  ParallelEq.h
Source/ui/: BoratoEqLookAndFeel.cpp  BoratoEqLookAndFeel.h  EqBandComponent.cpp  EqBandComponent.h  FilterPanelComponent.cpp  FilterPanelComponent.h  HeaderBarComponent.cpp  HeaderBarComponent.h  RightPanelComponent.cpp  RightPanelComponent.h
docs/: RELEASE-v0.2.0-PLAN.md
